<resources>
    <string name="app_name">Geoshot</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="ja_possui_conta">Já possui conta?</string>
    <string name="nome_completo">Nome completo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="n_o_possui_conta">Não possui conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="challenges">Challenges</string>
    <string name="search">Search</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="perfil_do_usu_rio">Perfil do Usuário</string>
    <string name="invalid_login">Usuário ou senha incorretos!</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="usu_rio_a_pesquisar">Usuário a pesquisar</string>
</resources>