<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.geoshot.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/search"
        android:name="com.example.geoshot.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/createcChallenge"
        android:name="com.example.geoshot.ui.create_challenge.CreateChallengeFragment"
        android:label="@string/create_challenge"
        tools:layout="@layout/fragment_cretate_challenge" />

    <fragment
        android:id="@+id/perfil"
        android:name="com.example.geoshot.ui.perfil.PerfilFragment"
        android:label="perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>